# rustpde-mpi

./: .gitmodules  Cargo.toml  README.md
benches/: benchmark_navier.rs  benchmark_to_ortho.rs  benchmark_transform.rs
examples/: hholtz_mpi.rs  hholtz_periodic_mpi.rs  navier_lnse_opt.rs  navier_lnse_opt_reversals.rs  navier_lnse_test_gradient.rs  navier_mpi.rs  navier_mpi_obstacle.rs  navier_periodic_hc_mpi.rs  navier_periodic_mpi.rs  navier_rbc.rs  navier_rbc_periodic.rs  navier_rbc_roughness.rs  navier_rbc_steady.rs  navier_rbc_steady_continuation.rs  navier_rbc_steady_continuation_mpi.rs  navier_rbc_steady_mpi.rs  poisson_mpi.rs  solve_hholtz_mpi.rs  solve_hholtz_periodic_mpi.rs  solve_navier_mpi.rs  solve_navier_mpi_obstacle.rs  solve_navier_periodic_mpi.rs  solve_poisson_mpi.rs  swift_hohenberg_1d.rs  swift_hohenberg_2d.rs
plot/: grad.py  plot_anim2d.py  test.py
plot/utils/: plot_utils.py
python/: anim2d.py  grad.py  plot2d.py  plot_anim2d.py
python/utils/: plot_utils.py
src/: bases.rs  field.rs  field_mpi.rs  io.rs  lib.rs  main.rs  solver.rs  types.rs
src/field/: average.rs  io.rs  read.rs  traits.rs  write.rs
src/field_mpi/: average.rs  io.rs  io_mpi.rs  io_mpi_sequ.rs
src/io/: read_write_hdf5.rs  read_write_mpi_hdf5.rs  read_write_slice_hdf5.rs  traits.rs
src/mpi/: field.rs  mod.rs  navier.rs  solver.rs
src/navier/: mod.rs  navier.rs  solid_masks.rs  statistics.rs  vorticity.rs
src/navier_stokes/: adjoint.rs  boundary_conditions.rs  conv_term.rs  functions.rs  mod.rs  navier.rs  navier_eq.rs  navier_io.rs  solid_masks.rs  statistics.rs  (+4 more)
(+44 files in other folders)
